--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "helmet": "^3.22.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.7",
-    "morgan": "^1.10.0"
+    "mongoose": "^5.9.7"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
@@ -26,6 +25,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "vvvvvv"
+    "url": "https://github.com/cbehrs/theam_crm_api.git"
   }
 }
