--- a/package.json
+++ b/package.json
@@ -5,26 +5,34 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "jest"
+    "start": "NODE_ENV=production node index.js",
+    "test": "NODE_ENV=test PORT=3001 jest --watchAll --verbose --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "config": "^3.3.1",
-    "debug": "^4.1.1",
+    "@hapi/joi": "^17.1.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "helmet": "^3.22.0",
-    "joi": "^14.3.1",
+    "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.7"
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.7",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
-    "morgan": "^1.10.0",
+    "jest": "^25.2.7",
+    "supertest": "^4.0.2",
     "nodemon": "^2.0.2"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/cbehrs/theam_crm_api.git"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
